--- a/home.html
+++ b/home.html
@@ -3,6 +3,98 @@
 
 <style>
 
+.test{
+  position: relative;
+  height:200px;
+  width:100px;
+  border-radius: 0px 200px 200px 0px;
+  -moz-border-radius: 0px 200px 200px 0px;
+  -webkit-border-radius: 0px 200px 200px 0px;
+  background:green;
+  box-shadow:0 0 0 2vmin white;
+}
+
+
+a{
+  position:absolute;
+  left:0; top:0;
+  width:100%; height:50%;
+  overflow:hidden;
+  transform:scale(.5) translateZ(0px);
+  background:green;
+  z-index: -2;
+}
+
+a:nth-child(1){
+  left: 15.5%;
+  top: -25%;
+  border-radius:50% 50% 50% 50%;
+  transform-origin: 110% 110%;
+  transition:transform .4s .15s;
+  -ms-transform: rotate(-2deg); /* IE 9 */
+  -webkit-transform: rotate(-2deg); /* Chrome, Safari, Opera */
+  transform: rotate(-5deg);
+  background: gray;
+  z-index: -1;
+}
+
+.container{
+  padding: 0%;
+  margin-left: 0%;
+}
+
+
+/*div{
+  position:relative;
+  width:40%; height:80%;
+  margin:0 auto;
+  background:inherit;
+  transform:scale(0.2);
+  opacity:1;
+  transition:transform .5s, opacity .5s;
+}
+
+a{
+  position:absolute;
+  left:0; top:0;
+  width:47.5%; height:47.5%;
+  overflow:hidden;
+  transform:scale(.5) translateZ(0px);
+  background:#585247;
+}
+
+a:nth-child(1){
+  left: -22.5%;
+  border-radius:40vmin 0 0 0;
+  transform-origin: 110% 110%;
+  transition:transform .4s .15s;
+}
+a:nth-child(2){
+  border-radius:0 40vmin 0 0;
+  left:72.5%;
+  transform-origin: -10% 110%;
+  transition:transform .4s .2s;
+}
+a:nth-child(3){
+  border-radius:0 0 0 40vmin;
+  top:72.5%;
+  transform-origin: 110% -10%;
+  transition:transform .4s .25s;
+}
+a:nth-child(4){
+  border-radius:0 0 40vmin 0;
+  top:72.5%; left:72.5%;
+  transform-origin: -10% -10%;
+  transition:transform .4s .3s;
+}
+a:nth-child(5){
+  width:55%;height:55%;
+  left:22.5%; top:22.5%;
+  border-radius:50vmin;
+  box-shadow:0 0 0 5vmin white;
+  transform:scale(1);
+}
+*/
 
 
 </style>
@@ -10,15 +102,14 @@
   <html>
   <body>
 
-  	<div class="wrapper">
-  		<div class="container">
-
-
-
-
-
-  		</div>
-  	</div>
+<div class="wrapper">
+  <div class="container">
+      <div class="test" style="margin-top:15%">
+        <a href="#"></a>
+        <a href="#"></a>
+      </div>
+  </div>
+</div> 
 
 
   </body>
