Images and html updates

--- a/home.html
+++ b/home.html
@@ -144,31 +144,56 @@ svg{
 
 
 
-  <div class="container" style="background-color:red">
-    <h2> Emoji </h2>
-
+  <div class="container">
+    <h2 style="text-align:center"> Emoji </h2>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2"><img src="img/sad.png"></div>
+        <div class="col-md-2"><img src="img/giggly.png" alt="Smiley face"></div>
+        <div class="col-md-2"><img src="img/happy.png" alt="Smiley face"></div>
+        <div class="col-md-2"><img src="img/mad.png" alt="Smiley face"></div>
+        </div>
+      </div>
   </div>  
 
-  <div class="container">
-    <h2> Landscape </h2>
+  <div class="container" align="center">
+    <h2 style="padding-top:2%; padding-bottom:2%"> Landscape </h2>
+    <h1 style="text-align:center;">Choose one of the following:</h1>
+      <div class="row">
+          <div class="col-md-3"><img src="img/lake.jpg" alt="Lake" height="50%"></div>
+          <div class="col-md-3"><img src="img/skyline.jpg" alt="Skyline at night" height="50%"></div>
+          <div class="col-md-3"><img src="img/Tropical-Island.jpg" alt="Island" height="50%"></div>
+          <div class="col-md-3"><img src="img/forest.jpg" alt="Forest" height="50%"></div>
+  </div>
 
 
   </div>
 
   <div class="container">
-    <h2> Words </h2>
+    <h2 style="text-align:center"> Words </h2>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2"><h1>Sexy</h1></div>
+        <div class="col-md-2"><h1>Wild</h1></div>
+        <div class="col-md-2"><h1>Sophisticated</h1></div>
+        <div class="col-md-2 col-md-offset-1"><h1>Spicy</h1></div>
+        </div>
+
+  </div>
+
+    <div class="container">
+    <h2 style="text-align:center"> Colors </h2>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2" style="background-color:blue; height:90%;"></div>
+        <div class="col-md-2" style="background-color:red; height:90%;"></div>
+        <div class="col-md-2" style="background-color:green; height:90%;"></div>
+        <div class="col-md-2" style="background-color:yellow; height:90%"></div>
+        </div>
+      </div>
 
 
   </div>
 
     <div class="container">
-    <h2> Colors </h2>
-
-
-  </div>
-
-    <div class="container">
-    <h2> Final </h2>
+    <h2 style="text-align:center"> Final </h2>
 
 
   </div>
@@ -176,7 +201,10 @@ svg{
 
 
 </div> 
+
+
   </body>
+
 
 <script type="text/javascript">
 
