--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
 
 <style>
 
+body{
+  overflow-x: hidden; 
+}
+
 .test{
   position: relative;
   height:50%;
@@ -31,15 +35,15 @@ svg{
 }
 
 .circular-menu {
-  width: 470px;
-  height: 450px;
+  width: 530px;
+  height: 410px;
   margin: 50px auto 0;
   position: relative;
 }
 
 .circle {
-  width: 450px;
-  height: 450px;
+  width: 550px;
+  height: 550px;
   opacity: 0;
  
   -webkit-transform: scale(0);
@@ -76,15 +80,15 @@ svg{
 
 .menu-button {
   position: absolute;
-  top: calc(50% - 50px);
-  left: calc(50% - 50px);
+  top: calc(50% + 10px);
+  left: calc(50% - 60px);
   text-decoration: none;
   text-align: center;
   color: #444;
   border-radius: 50%;
   display: block;
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   line-height: 40px;
   padding: 25px;
   background: #dde;
@@ -95,7 +99,19 @@ svg{
   background-color: #eef;
 }
 
+.title{
+  margin-top: 37%;
+}
 
+.col-md-2{
+  padding: none;
+}
+
+#emoti:hover{
+    transition: 0.9s;
+    transform: rotateX(360deg);
+    -webkit-transform: rotateX(360deg);
+}
 </style>
 
   <html>
@@ -103,7 +119,6 @@ svg{
 
 <div class="wrapper">
   <div class="container">
-    <div class="col-lg-5">
    <!-- <svg width="400" height="400">
     <path d="M20,200 L360,0 A180,180 0 0,1 20,200 z"
         style="fill:#707070;
@@ -112,7 +127,7 @@ svg{
             stroke-width: 1"
         transform = "rotate(-60 320 400)"/>
     </svg>-->
-     
+     <div class="col-md-5">
       <nav class="circular-menu">
        <div class="circle">
       <a href="" class="fa fa-home fa-2x"></a>
@@ -124,52 +139,41 @@ svg{
       <a href="" class="fa fa-pinterest fa-2x"></a>
       <a href="" class="fa fa-asterisk fa-2x"></a>
       </div>
-
-
-      <a href="" class="menu-button fa fa-bars fa-2x"></a>
+      <a href="" class="menu-button"></a>
       </nav>
-
-
-
-</div>  
-
-    
-
-  </div>
-  <div class="col-lg-7">
-
-        <h1> TEST </h1>
     </div>
+    <div class="col-md-7">
+      <div class="title"><h1> Moodologist </h1></div>
+    </div>    
+
+
   </div>
 
 
 
-  <div class="container">
-    <h2 style="text-align:center"> Emoji </h2>
-      <div class="row">
-        <div class="col-md-2 col-md-offset-2"><img src="img/sad.png"></div>
-        <div class="col-md-2"><img src="img/giggly.png" alt="Smiley face"></div>
-        <div class="col-md-2"><img src="img/happy.png" alt="Smiley face"></div>
-        <div class="col-md-2"><img src="img/mad.png" alt="Smiley face"></div>
+  <div class="container" style="background-color:#e0d9fe">
+      <div class="row" style="padding-top:23%">
+        <div class="col-md-2 col-md-offset-2" id="emoti" style="margin-left:20%"><img src="img/sad.png" width="60%"></div>
+        <div class="col-md-2" id="emoti"><img src="img/giggly.png" alt="Smiley face" width="60%"></div>
+        <div class="col-md-2" id="emoti"><img src="img/happy.png" alt="Smiley face" width="60%"></div>
+        <div class="col-md-2" id="emoti"><img src="img/mad.png" alt="Smiley face" width="60%"></div>
         </div>
       </div>
   </div>  
 
-  <div class="container" align="center">
-    <h2 style="padding-top:2%; padding-bottom:2%"> Landscape </h2>
-    <h1 style="text-align:center;">Choose one of the following:</h1>
-      <div class="row">
-          <div class="col-md-3"><img src="img/lake.jpg" alt="Lake" height="50%"></div>
-          <div class="col-md-3"><img src="img/skyline.jpg" alt="Skyline at night" height="50%"></div>
-          <div class="col-md-3"><img src="img/Tropical-Island.jpg" alt="Island" height="50%"></div>
-          <div class="col-md-3"><img src="img/forest.jpg" alt="Forest" height="50%"></div>
+  <div class="container" align="center" style="background-color:#ffb770; padding-top:8%">
+    <h2 style="text-align:center;">Choose one of the following:</h2>
+      <div class="row" style="margin-top:5%">
+          <div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/forest.jpg" alt="Forest" height="40%" width="120%"></div>
   </div>
 
 
   </div>
 
   <div class="container">
-    <h2 style="text-align:center"> Words </h2>
       <div class="row">
         <div class="col-md-2 col-md-offset-2"><h1>Sexy</h1></div>
         <div class="col-md-2"><h1>Wild</h1></div>
