--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@ svg{
 }
  
 .circle a:hover {
-  color: #eef;
+  color: #4b2c4d;
 }
 
 .menu-button {
@@ -108,6 +108,11 @@ svg{
 .col-md-2{
   padding: none;
 }
+
+.circle .fa-circle:hover{
+  color: black;
+}
+
 
 #emoti:hover{
     transition: 0.9s;
@@ -170,16 +175,16 @@ svg{
      <div class="col-md-5">
       <nav class="circular-menu">
        <div class="circle">
-      <a class="fa fa-home fa-2x" id="emoticon"></a>
+      <a class="fa fa-smile-o fa-3x" id="emoticon"></a>
       <a class="fa fa-circle fa-1x"></a>
-      <a class="fa fa-twitter fa-2x" id="landscape"></a>
+      <a class="fa fa-camera fa-3x" id="landscape"></a>
       <a class="fa fa-circle fa-1x"></a>
-      <a class="fa fa-github fa-2x" id="words"></a>
+      <a class="fa fa-text-width fa-3x" id="words"></a>
       <a class="fa fa-circle fa-1x"></a>
-      <a class="fa fa-pinterest fa-2x" id="colors"></a>
+      <a class="fa fa-paint-brush fa-3x"  id="colors"></a>
       <a class="fa fa-circle fa-1x"></a>
       </div>
-      <a class="menu-button"></a>
+      <a class="menu-button" style="background-image:url('img/shaker.png'); background-size:70%; background-repeat:no-repeat; background-position:center"></a>
       </nav>
     </div>
     <div class="col-md-7">
