--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
   <link rel="stylesheet" type="text/css" href="css/home.css">
   <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+  <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Lobster|Monoton|Kaushan+Script|Poiret+One' rel='stylesheet' type='text/css'>
+
 
 <style>
 
@@ -206,29 +208,38 @@ svg{
       </div>
   </div>  
 
-  <div class="container landscape" align="center" style="background-color:#ffb770; padding-top:8%">
-    <h2 style="text-align:center;">Choose one of the following:</h2>
+  <div class="container landscape" align="center" style="background-color:#ffffff; padding-top:8%">
+    <h2 style="text-align:center; ">Choose one of the following:</h2>
       <div class="row" style="margin-top:5%">
-          <div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/forest.jpg" alt="Forest" height="40%" width="120%"></div>
+          <div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%" style="border-radius:100%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%" style="border-radius:100%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%" style="border-radius:100%"></div>
+          <div class="col-md-2 col-md-offset-1"><img src="img/forest.jpg" alt="Forest" height="40%" width="120%" style="border-radius:100%"></div>
   </div>
 
 
   </div>
+
+
 
   <div class="container words" style="background-color:#fefee3">
-      <div class="row" style="padding:10%">
-        <div class="col-md-4 col-md-offset-2"><h1>Sexy</h1></div>
-        <div class="col-md-6"><h1>Wild</h1></div>
+      <div class="row" style="padding:7%">
+      <h3 align="center" style="font-size:3em;">Pick a word:</h3>
+        <div class="col-md-4 col-md-offset-2"><h1 style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div>
+        <div class="col-md-5"><h1 style="font-family: 'Monoton', cursive; font-size:12em;">Fun</h1></div>
         </div>
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1"><h1>Sophisticated</h1></div>
-          <div class="col-md-6"><h1 align="center">Spicy</h1></div>
+        <div class="row" >
+          <div class="col-md-5 col-md-offset-2" style="top:0;"><h1 style="font-family: 'Rouge Script', cursive; font-size:11em;">Classy</h1></div>
+          <div class="col-md-5"><h1 align="left" style="font-family: 'Kaushan Script', cursive; font-size:10em;">Spicy</h1></div>
         </div>
 
   </div>
+
+
+
+
+
+
 
     <div class="container colors">
       <div class="row" style="padding-left:8%; padding-top: 20%;">
@@ -338,22 +349,25 @@ $('#colors').hover(function(){
 
 
 function fadeDivIn(){
-    $("#co").animate({'color': "#5e1530" }, 4000, function(){fadeDiv2();});
+    $("#co").animate({'color': "#FFFF00" }, 1000, function(){fadeDiv2();});
 }
 function fadeDiv2(){
-    $("#co").animate({'color': "#7fffd4" }, 4000, function(){fadeDiv3();});
+    $("#co").animate({'color': "#008F59" }, 1000, function(){fadeDiv3();});
 }
 
 function fadeDiv3(){
-    $("#co").animate({'color': "#9f5f76" }, 4000, function(){fadeDiv4();});
+    $("#co").animate({'color': "#92771B2" }, 1000, function(){fadeDiv4();});
 }
 
 function fadeDiv4(){
-    $("#co").animate({'color': "#3de" }, 4000, function(){fadeDiv5();});
+    $("#co").animate({'color': "#6E3795" }, 1000, function(){fadeDiv5();});
 }
 
 function fadeDiv5(){
-    $("#co").animate({'color': "#8C001A" }, 4000, function(){fadeDivIn();});
+    $("#co").animate({'color': "#FF0000" }, 1000, function(){fadeDiv6();});
+}
+function fadeDiv6(){
+    $("#co").animate({'color': "#FF9201" }, 1000, function(){fadeDivIn();});
 }
 
 $(document).ready(function(){
