--- a/home.html
+++ b/home.html
@@ -223,7 +223,7 @@ svg{
     <div class="col-md-7">
       <div class="title" id="co"><h1> Moodologist </h1></div>
       <div id="m"><h3> You thirsty brah? - Brosapham Lincoln </h3> </div>
-      <div id="n"><h3> Emoticon </h3> </div>
+      <div id="n"><h3> Emoji </h3> </div>
       <div id="o"><h3> Landscape </h3> </div>
       <div id="p"><h3> Word </h3> </div>
       <div id="q"><h3> Color </h3> </div>
@@ -236,24 +236,21 @@ svg{
 
   <div class="container emoticon" style="background-color:#e0d9fe">
       <div class="row" style="padding-top:23%">
-        <div class="col-md-2 col-md-offset-2" id="emoti" style="margin-left:20%"><img src="img/sad.png" width="60%"></div>
-        <div class="col-md-2" id="emoti"><img src="img/giggly.png" alt="Smiley face" width="60%"></div>
-        <div class="col-md-2" id="emoti"><img src="img/happy.png" alt="Smiley face" width="60%"></div>
-        <div class="col-md-2" id="emoti"><img src="img/mad.png" alt="Smiley face" width="60%"></div>
+        <div id="Sad"><div class="col-md-2 col-md-offset-2" id="emoti" style="margin-left:20%"><img src="img/sad.png" width="60%"></div></div>
+        <div id="Giggly"><div class="col-md-2" id="emoti"><img src="img/giggly.png" alt="Smiley face" width="60%"></div></div>
+        <div id="Happy"><div class="col-md-2" id="emoti"><img src="img/happy.png" alt="Smiley face" width="60%"></div></div>
+       <div id="Mad"> <div class="col-md-2" id="emoti"><img src="img/mad.png" alt="Smiley face" width="60%"></div></div>
         </div>
-      </div>
-  </div>  
+  </div> 
 
   <div class="container landscape" align="center" style="background-color:#ffffff; padding-top:8%">
     <h2 style="text-align:center; ">Choose one of the following:</h2>
       <div class="row" style="margin-top:5%">
-          <div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%" style="border-radius:100%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%" style="border-radius:100%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%" style="border-radius:100%"></div>
-          <div class="col-md-2 col-md-offset-1"><img src="img/forest.jpg" alt="Forest" height="40%" width="120%" style="border-radius:100%"></div>
+          <div id="Mountains"><div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%" style="border-radius:100%"></div></div>
+          <div id="Skyline"><div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%" style="border-radius:100%"></div></div>
+          <div id="Island"><div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%" style="border-radius:100%"></div></div>
+          <div id="Country"><div class="col-md-2 col-md-offset-1"><img src="img/forest.jpg" alt="Forest" height="40%" width="120%" style="border-radius:100%"></div></div>
   </div>
-
-
   </div>
 
 
@@ -261,12 +258,12 @@ svg{
   <div class="container words" style="background-color:#fefee3">
       <div class="row" style="padding:7%">
       <h3 align="center" style="font-size:3em;">Pick a word:</h3>
-        <div class="col-md-4 col-md-offset-2"><h1 style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div>
-        <div class="col-md-5"><h1 style="font-family: 'Monoton', cursive; font-size:12em;">Fun</h1></div>
+        <div  class="col-md-4 col-md-offset-2"><h1 id="Simple" style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div>
+        <div  class="col-md-5"><h1 id="Fun" style="font-family: 'Monoton', cursive; font-size:12em;">Fun</h1></div>
         </div>
         <div class="row" >
-          <div class="col-md-5 col-md-offset-2" style="top:0;"><h1 style="font-family: 'Rouge Script', cursive; font-size:11em;">Classy</h1></div>
-          <div class="col-md-5"><h1 align="left" style="font-family: 'Kaushan Script', cursive; font-size:10em;">Spicy</h1></div>
+          <div  class="col-md-5 col-md-offset-2" style="top:0;"><h1 id="Classy" style="font-family: 'Rouge Script', cursive; font-size:11em;">Classy</h1></div>
+          <div class="col-md-5"><h1 id="Spicy"  align="left" style="font-family: 'Kaushan Script', cursive; font-size:10em;">Spicy</h1></div>
         </div>
 
   </div>
@@ -295,17 +292,12 @@ svg{
       </div>
 
 
-  </div>
+      <div class="container final" style="background-color:#b8b5b5; padding-top:13%">
 
-    <div class="container final" style="background-color:#b8b5b5">
-    <h2 style="text-align:center"> Final </h2>
-
-    <div class="col-md-4"></div>
-    <div class="col-md-4" id="glass"><div id="drink"></div></div>
-    <div class="col-md-4"></div>
-
-
-  </div>
+      <div class="col-md-4" align="center"><h1>TEST</h1></div>
+      <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div></div>
+      <div class="col-md-4" style="padding-left:4%"><h3> For more information about this cocktail, please visit....</div>
+      </div>
 
 
 
@@ -314,6 +306,7 @@ svg{
 
 </body>
 
+<script src="js/java.js"></script>
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
