--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@ svg{
   <div class="container words" style="background-color:#fefee3">
       <div class="row" style="padding:7%">
       <h3 align="center" style="font-size:3em;">Pick a word:</h3>
-        <div  class="col-md-4 col-md-offset-2"><h1 id="Simple" style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div>
+        <div  class="col-md-4 col-md-offset-2"><div id="Simple" <h1  style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div></div>
         <div  class="col-md-5"><h1 id="Fun" style="font-family: 'Monoton', cursive; font-size:12em;">Fun</h1></div>
         </div>
         <div class="row" >
@@ -294,7 +294,7 @@ svg{
 
       <div class="container final" style="background-color:#b8b5b5; padding-top:13%">
 
-      <div class="col-md-4" align="center"><h1>TEST</h1></div>
+      <div class="col-md-4" align="center"><h1><span class="yourdrink">TEST</span></h1></div>
       <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div></div>
       <div class="col-md-4" style="padding-left:4%"><h3> For more information about this cocktail, please visit....</div>
       </div>
