--- a/home.html
+++ b/home.html
@@ -273,16 +273,16 @@ svg{
     <div class="container colors">
       <div class="row" style="padding-left:8%; padding-top: 20%;">
         <div class="col-md-3">
-          <div class="sphere green"></div>
+          <div id ="Green" class="sphere green"></div>
         </div>
         <div class="col-md-3">
-          <div class="sphere blue"></div>
+          <div id = "Blue" class="sphere blue"></div>
         </div>
         <div class="col-md-3">
-          <div class="sphere yellow"></div>
+          <div id = "Orange" class="sphere yellow"></div>
         </div>
         <div class="col-md-3">
-          <div class="sphere red"></div>
+          <div  id = "Red" class="sphere red"></div>
         </div>
         </div>
       </div>
@@ -291,7 +291,11 @@ svg{
       <div class="container final" style="background-color:#b8b5b5; padding-top:13%">
 
       <div class="col-md-4" align="center"><h1><span class="yourdrink">TEST</span></h1></div>
-      <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div></div>
+      <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div> 
+
+      <div id="poweranother">Power Me Another</div> 
+      </div>
+
       <div class="col-md-4" style="padding-left:4%"><h3> For more information about this cocktail, please visit....</div>
       </div>
 
