--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
   <link rel="stylesheet" type="text/css" href="css/home.css">
   <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-  <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Lobster|Monoton|Kaushan+Script|Poiret+One' rel='stylesheet' type='text/css'>
-
+ <!-- <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Monoton|Kaushan+Script|Poiret+One' rel='stylesheet' type='text/css'>
+-->
 
 <style>
 
@@ -222,7 +222,7 @@ svg{
     </div>
     <div class="col-md-7">
       <div class="title" id="co"><h1> Moodologist </h1></div>
-      <div id="m"><h3> You thirsty brah? - Brosapham Lincoln </h3> </div>
+      <div id="m"><h3 style="margin-top:-10px;">&nbsp;&nbsp;&nbsp;&nbsp; You thirsty brah? - Brosapham Lincoln </h3> </div>
       <div id="n"><h3> Emoticon </h3> </div>
       <div id="o"><h3> Landscape </h3> </div>
       <div id="p"><h3> Word </h3> </div>
@@ -244,9 +244,9 @@ svg{
       </div>
   </div>  
 
-  <div class="container landscape" align="center" style="background-color:#ffffff; padding-top:8%">
+  <div class="container landscape" align="center" style="background-color:#fefee3; padding-top:8%">
     <h2 style="text-align:center; ">Choose one of the following:</h2>
-      <div class="row" style="margin-top:5%">
+      <div class="row" style="margin-top:5%; padding-top:2%;">
           <div class="col-md-2" style="margin-left:3%"><img src="img/lake.jpg" alt="Lake" height="40%" width="120%" style="border-radius:100%"></div>
           <div class="col-md-2 col-md-offset-1"><img src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%" style="border-radius:100%"></div>
           <div class="col-md-2 col-md-offset-1"><img src="img/Tropical-Island.jpg" alt="Island" height="40%" width="120%" style="border-radius:100%"></div>
@@ -259,15 +259,15 @@ svg{
 
 
   <div class="container words" style="background-color:#fefee3">
-      <div class="row" style="padding:7%">
-      <h3 align="center" style="font-size:3em;">Pick a word:</h3>
-        <div class="col-md-4 col-md-offset-2"><h1 style="font-family: 'Poiret One', cursive; font-size:8em;">Simple</h1></div>
-        <div class="col-md-5"><h1 style="font-family: 'Monoton', cursive; font-size:12em;">Fun</h1></div>
-        </div>
-        <div class="row" >
-          <div class="col-md-5 col-md-offset-2" style="top:0;"><h1 style="font-family: 'Rouge Script', cursive; font-size:11em;">Classy</h1></div>
-          <div class="col-md-5"><h1 align="left" style="font-family: 'Kaushan Script', cursive; font-size:10em;">Spicy</h1></div>
-        </div>
+    <div class="row" style="padding:7%">
+        <h3 align="center" style="font-size:3em;">Pick a word:</h3>
+          <div class="col-md-4 col-md-offset-2"><img src="img/simple-1.png" alt="Simple" width="97%"></div>
+          <div class="col-md-5"><img src="img/fun-1.png" alt="Fun" width=""></div>
+    </div>
+    <div class="row">
+          <div class="col-md-5 col-md-offset-1" style="top:-10%;"><img src="img/classy-1.png" alt="Classy" width=""></div>
+          <div class="col-md-5" style="float:left;"><img src="img/spicy-1.png" alt="Spicy" width=""></div>
+    </div>
 
   </div>
 
@@ -278,7 +278,8 @@ svg{
 
 
     <div class="container colors">
-      <div class="row" style="padding-left:8%; padding-top: 20%;">
+      <h3 style="text-align:center; padding-top:8%; font-size:3em;">Pick a color:</h3>
+      <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 10%;">
         <div class="col-md-3">
           <div class="sphere green"></div>
         </div>
