--- a/home.html
+++ b/home.html
@@ -288,7 +288,7 @@ svg{
       </div>
 
 
-      <div class="container final" style="background-color:#b8b5b5; padding-top:13%">
+      <div class="container final" style="background-color:#e5e5e5; padding-top:13%">
 
       <div class="col-md-4" align="center"><h1><span class="yourdrink">TEST</span></h1></div>
       <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div> 
@@ -400,7 +400,6 @@ $('#colors').hover(function(){
 });
 
 
-
 var worker = null;
 var loaded = 0;
 
@@ -421,9 +420,6 @@ function startLoading() {
 function stopLoading() {
     clearInterval(worker);
 }
-
-
-
 
 
 
