--- a/home.html
+++ b/home.html
@@ -172,7 +172,7 @@ svg{
 #glass {
     position: relative;
     height: 50%;
-    width: 20%;
+    width: 70%;
     background: rgba(255,255,255,.1);
     border-radius: 0% 0% 15% 15%;
     border: 3px solid;
@@ -293,14 +293,15 @@ svg{
 
 
       <div class="container final" style="background-color:#e5e5e5; padding-top:13%">
-
+      <div class="row">
       <div class="col-md-4" align="center"><h1><span class="yourdrink">TEST</span></h1></div>
-      <div class="col-md-4" id="glass" style="margin-left:6%;"><div id="drink"></div> 
-
-      <div id="poweranother">Power Me Another</div> 
-      </div>
-
-      <div class="col-md-4" style="padding-left:4%"><h3> For more information about this cocktail, please visit....</div>
+      <div class="col-md-4" style="padding-left:3%"><div id="glass"> <div id="drink"></div></div></div>
+      <div class="col-md-4"><h3> For more information about this cocktail, please visit....</div>
+    </div>
+    <div clas="row" style="padding-top:5%;">
+    <div class="col-md-4"></div> 
+    <div class="col-md-4" id="poweranother" style="padding-left:5%;" ><h3>Pour Me Another</h3></div></div>
+  </div>
       </div>
 
 
