Include word images

--- a/home.html
+++ b/home.html
@@ -224,13 +224,10 @@ svg{
     <div class="col-md-7">
       <div class="title" id="co"><h1> Moodologist </h1></div>
       <div id="m"><h3 style="margin-top:-10px;">&nbsp;&nbsp;&nbsp;&nbsp; You thirsty brah? - Brosapham Lincoln </h3> </div>
-      <div id="n"><h3> Emoticon </h3> </div>
-<!--
-      <div id="m"><h3> You thirsty brah? - Brosapham Lincoln </h3> </div>
       <div id="n"><h3> Emoji </h3> </div>
       <div id="o"><h3> Landscape </h3> </div>
       <div id="p"><h3> Word </h3> </div>
-      <div id="q"><h3> Color </h3> </div>-->
+      <div id="q"><h3> Color </h3> </div>
     </div>    
 
 
