--- a/home.html
+++ b/home.html
@@ -336,8 +336,8 @@ $('#Mountains, #Skyline, #Island, #Country').click(function(){
   startLoading();
 });
 
-/*$('#Happy, #Giggly, #Sad, #Mad').click(function(){
-  $('.emoticon').fadeOut('fast');
+$('#Green, #Blue, #Orange, #Red').click(function(){
+  $('.colors').fadeOut('fast');
   $('.final').show('slow');
   startLoading();
 });
