--- a/home.html
+++ b/home.html
@@ -258,10 +258,10 @@ svg{
 
 
   <div class="container words" style="background-color:#fefee3">
-    <div class="row" style="padding:7%">
-        <h3 align="center" style="font-size:3em;">Pick a word:</h3>
-          <div class="col-md-4 col-md-offset-2"><img src="img/simple-1.png" alt="Simple" width="97%"></div>
-          <div class="col-md-5"><img src="img/fun-1.png" alt="Fun" width=""></div>
+    <div class="row" style="padding:5%">
+        <h3 align="center" style="font-size:3em;padding-bottom:5%">Pick a word:</h3>
+          <div class="col-md-5"><img src="img/simple-1.png" alt="Simple" width="97%"></div>
+          <div class="col-md-5 col-md-offset-1"><img src="img/fun-1.png" alt="Fun" width=""></div>
     </div>
     <div class="row">
           <div class="col-md-5 col-md-offset-1" style="top:-10%;"><img src="img/classy-1.png" alt="Classy" width=""></div>
@@ -342,11 +342,11 @@ $('#Green, #Blue, #Orange, #Red').click(function(){
   startLoading();
 });
 
-/*$('#Happy, #Giggly, #Sad, #Mad').click(function(){
-  $('.emoticon').fadeOut('fast');
+$('#Simple, #Fun, #Classy, #Spicy').click(function(){
+  $('.words').fadeOut('fast');
   $('.final').show('slow');
   startLoading();
-});*/
+});
 
 $('#emoticon').click(function(){
   $('.home').fadeOut('fast');
