--- a/home.html
+++ b/home.html
@@ -260,12 +260,12 @@ svg{
   <div class="container words" style="background-color:#fefee3">
     <div class="row" style="padding:5%">
         <h3 align="center" style="font-size:3em;padding-bottom:5%">Pick a word:</h3>
-          <div class="col-md-5"><img src="img/simple-1.png" alt="Simple" width="97%"></div>
-          <div class="col-md-5 col-md-offset-1"><img src="img/fun-1.png" alt="Fun" width=""></div>
+          <div id = "Simple" class="col-md-5"><img src="img/simple-1.png" alt="Simple" width="97%"></div>
+          <div id = "Fun" class="col-md-5 col-md-offset-1"><img src="img/fun-1.png" alt="Fun" width=""></div>
     </div>
     <div class="row">
-          <div class="col-md-5 col-md-offset-1" style="top:-10%;"><img src="img/classy-1.png" alt="Classy" width=""></div>
-          <div class="col-md-5" style="float:left;"><img src="img/spicy-1.png" alt="Spicy" width=""></div>
+          <div id = "Classy" class="col-md-5 col-md-offset-1" style="top:-10%;"><img src="img/classy-1.png" alt="Classy" width=""></div>
+          <div id = "Spicy"class="col-md-5" style="float:left;"><img src="img/spicy-1.png" alt="Spicy" width=""></div>
     </div>
   </div>
 
