--- a/home.html
+++ b/home.html
@@ -291,7 +291,7 @@ svg{
 
       <div class="container final" style="background-color:#e5e5e5; padding-top:13%">
       <div class="row">
-      <div class="col-md-4" align="center"><h1><span class="yourdrink">TEST</span></h1></div>
+      <div class="col-md-4" align="center"><h1><span class="yourdrink"></span></h1></div>
       <div class="col-md-4" style="padding-left:3%"><div id="glass"> <div id="drink"></div></div></div>
       <div class="col-md-4"><h3> For more information about this cocktail, please visit....</div>
     </div>
