--- a/home.html
+++ b/home.html
@@ -121,6 +121,12 @@ svg{
     -webkit-transform: rotateX(360deg);
 }
 
+#spin:hover{
+    transition: 0.9s;
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
+}
+
 .emoticon, .colors, .landscape, .words, .final{
   display: none;
 }
@@ -189,6 +195,57 @@ svg{
     box-shadow: inset 0 2px 1px rgba(255,69,0,.2);
     opacity: .7;
 }
+
+
+/*HOVER EFFECT FOR COLORS*/
+@-webkit-keyframes hvr-buzz {
+  50% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+
+  100% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+}
+
+@keyframes hvr-buzz {
+  50% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+
+  100% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+}
+
+.hvr-buzz {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+}
+.hvr-buzz:hover, .hvr-buzz:focus, .hvr-buzz:active {
+  -webkit-animation-name: hvr-buzz;
+  animation-name: hvr-buzz;
+  -webkit-animation-duration: 0.15s;
+  animation-duration: 0.15s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+/*END OF HOVER EFFECT FOR COLORS*/
+
+
+
 
 #emoticon, #landscape, #words, #colors{}
 </style>
@@ -274,16 +331,16 @@ svg{
       <h3 style="text-align:center; padding-top:8%; font-size:3em;">Pick a color:</h3>
       <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 10%;">
         <div class="col-md-3">
-          <div id ="Green" class="sphere green"></div>
+          <div class="hvr-buzz"><div id ="Green" class="sphere green"></div></div>
         </div>
         <div class="col-md-3">
-          <div id = "Blue" class="sphere blue"></div>
+          <div class="hvr-buzz"><div id = "Blue" class="sphere blue"></div></div>
         </div>
         <div class="col-md-3">
-          <div id = "Orange" class="sphere yellow"></div>
+         <div class="hvr-buzz"><div id = "Orange" class="sphere yellow"></div></div>
         </div>
         <div class="col-md-3">
-          <div  id = "Red" class="sphere red"></div>
+          <div class="hvr-buzz"><div  id = "Red" class="sphere red"></div></div>
         </div>
         </div>
       </div>
